# workshop_management_client

./: Cargo.toml  README.md  build.rs
.cargo/: config.toml
src/: main.rs
src/models/: material_model.rs  mod.rs  project.rs  project_model.rs
src/utils/: error_dialog.rs  file_dialog.rs  keycloak_service.rs  mod.rs  workshop_service.rs
ui/: Backend.slint  Button.slint  CheckBox.slint  Constants.slint  Palette.slint  ToggleSwitch.slint  mainWindow.slint
ui/Views/: ClientPopUp.slint  LagerOverview.slint  LoginView.slint  ProjectDetailView.slint  ProjectManagement.slint  ProjectView.slint
ui/Widgets/: Appbar.slint  Button.slint  CheckBox.slint  Errormessage.slint  LagerText.slint  MatDetailRow.slint  MaterialAlertShort.slint  MaterialDetailCard.slint  MaterialPopUp.slint  MaterialTypePopUp.slint  ProjectDetailRow.slint  ProjectOverViewRowShort.slint  ProjectRowShort.slint  Rowtest.slint  TextField.slint  TitleSeciton.slint  ToggleSwitch.slint  WMSAppbar.slint
ui/Widgets/Lager/: LagerRow.slint
ui/models/: ClientModel.slint  MaterialModel.slint  MaterialTypeModel.slint  MockModels.slint  ProjectModel.slint  material_model.rs  project_model.rs
