[package]
name = "workshop_management_client"
version = "0.1.0"
authors = ["Jasha", "Justin"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.4"
reqwest = { version = "0.12.4", features = ["json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
slint-build = "1.4"
